# rp2

./: .bumpversion.cfg  .editorconfig  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.dev.md  README.md  lychee.toml  mypy.ini  pyproject.toml  requirements.txt  setup.cfg
.github/: FUNDING.yml
.github/workflows/: build.yml  codeql-analysis.yml  documentation_check.yml  static_analysis.yml  static_analysis_and_unit_tests.yml  unit_tests.yml  unix-like_unit_tests.yml  unix_unit_tests.yml  windows_unit_tests.yml
config/: crypto_example.config  crypto_example.ini  test_bad_data.config  test_bad_data.ini  test_data.config  test_data.ini  test_data4.config  test_data4.ini  test_data_multi_method.config  test_data_multi_method.ini  test_large_input.config  test_large_input.ini
doc/: README.md  developer_faq.md  developer_guide.md  faq.md  input_files.md  output_files.md  user_faq.md  user_guide.md
docs/: developer_faq.md  developer_guide.md  input_files.md  output_files.md  supported_countries.md  user_faq.md
input/: crypto_example.ods  hifo_crypto_example.ods  test_bad_data.ods  test_data.ods  test_data2.ods  test_data3.ods  test_data4.ods  test_data_multi_method.ods  test_hifo.ods  test_hifo2.ods  test_many_year_data.ods
input/golden/: crypto_example_en_fifo_rp2_full_report.ods  crypto_example_en_fifo_tax_report_jp.ods  crypto_example_es_es_fifo_rp2_full_report.ods  crypto_example_fifo_rp2_full_report.ods  crypto_example_fifo_tax_report_us.ods  crypto_example_hifo_rp2_full_report.ods  crypto_example_hifo_tax_report_us.ods  crypto_example_ie_en_IE_fifo_rp2_full_report.ods  crypto_example_ie_en_IE_fifo_tax_report_ie.ods  crypto_example_jp_en_fifo_open_positions.ods  crypto_example_jp_en_fifo_tax_report_jp.ods  crypto_example_lifo_rp2_full_report.ods  crypto_example_lifo_tax_report_us.ods  crypto_example_mock_8949_us_golden.ods  crypto_example_rp2_full_report.ods  crypto_example_rp2_report_golden.ods  crypto_example_tax_report_us.ods  test_data2_en_fifo_rp2_full_report.ods  test_data2_en_fifo_tax_report_jp.ods  test_data2_es_es_fifo_rp2_full_report.ods  test_data2_fifo_rp2_full_report.ods  test_data2_fifo_tax_report_us.ods  test_data2_hifo_rp2_full_report.ods  test_data2_hifo_tax_report_us.ods  test_data2_ie_en_IE_fifo_rp2_full_report.ods  test_data2_ie_en_fifo_tax_report_ie.ods  test_data2_jp_en_fifo_rp2_full_report.ods  test_data2_jp_en_fifo_tax_report_jp.ods  test_data2_lifo_rp2_full_report.ods  test_data2_lifo_tax_report_us.ods  test_data3_2019-12-01_2020-04-01_fifo_rp2_full_report.ods  test_data3_2019-12-01_2020-04-01_fifo_tax_report_us.ods  test_data3_2019-12-01_2020-04-01_hifo_rp2_full_report.ods  test_data3_2019-12-01_2020-04-01_lifo_rp2_full_report.ods  test_data3_2019-12-01_2020-04-01_lifo_tax_report_us.ods  test_data3_en_fifo_rp2_full_report.ods  test_data3_en_fifo_tax_report_jp.ods  test_data3_es_es_fifo_rp2_full_report.ods  test_data3_fifo_rp2_full_report.ods  test_data3_fifo_tax_report_us.ods  (+124 more)
input/golden/es/: crypto_example_es_es_fifo_rp2_full_report.ods  test_data2_es_es_fifo_rp2_full_report.ods  test_data3_es_es_fifo_rp2_full_report.ods  test_data4_es_es_fifo_rp2_full_report.ods  test_data_es_es_fifo_rp2_full_report.ods
input/golden/generic/: crypto_example_generic_fifo_rp2_full_report.ods  crypto_example_generic_hifo_rp2_full_report.ods  crypto_example_generic_lifo_rp2_full_report.ods  crypto_example_generic_lofo_rp2_full_report.ods  test_data2_generic_fifo_rp2_full_report.ods  (+45 more)
plugin/output/: mock_8949_us.py  rp2_report.py
resources/: template.ods
src/: abstract_entry.py  abstract_entry_set.py  abstract_generator.py  abstract_odt_generator.py  abstract_transaction.py  balance.py  computed_data.py  configuration.py  configuration_schema.py  entry_types.py  gain_loss.py  gain_loss_set.py  in_transaction.py  input_data.py  intra_transaction.py  logger.py  ods_parser.py  out_transaction.py  rp2_decimal.py  rp2_error.py  rp2_main.py  tax_engine.py
src/rp2/: abstract_accounting_method.py  abstract_country.py  abstract_entry.py  abstract_entry_set.py  abstract_report_generator.py  abstract_specific_id.py  abstract_transaction.py  accounting_engine.py  avl_tree.py  balance.py  computed_data.py  configuration.py  configuration_schema.py  entry_types.py  gain_loss.py  gain_loss_set.py  global_allocation.py  in_transaction.py  input_data.py  intra_transaction.py  localization.py  logger.py  ods_parser.py  out_transaction.py  per_wallet_tax_engine.py  rp2_configuration_translator.py  rp2_decimal.py  rp2_error.py  rp2_main.py  tax_engine.py  transaction_set.py  transfer_analysis.py  transfer_analyzer.py
src/stubs/: babel.core.pyi  babel.pyi  ezodf.pyi
test/: ods_diff.py  rp2_test_output.py  test_configuration.py  test_gain_loss.py  test_gain_loss_set.py  test_in_transaction.py  test_input_parser.py  test_intra_transaction.py  test_ods_output_diff.py  test_out_transaction.py  test_rp2_decimal.py  test_tax_engine.py  test_taxable_flow.py  test_taxable_flow_set.py  test_transaction_set.py
tests/: abstract_test_ods_output_diff.py  global_allocation_common.py  ods_diff.py  per_wallet_tax_engine_common.py  rp2_test_output.py  test_accounting_method.py  test_avl_tree.py  test_balance.py  test_configuration.py  test_gain_loss.py  test_gain_loss_set.py  test_global_allocation.py  test_in_transaction.py  test_input_parser.py  test_intra_transaction.py  test_large_input.py  test_localized_output.py  test_ods_output_diff.py  test_ods_output_diff_es.py  test_ods_output_diff_generic.py  test_ods_output_diff_ie.py  test_ods_output_diff_jp.py  test_out_transaction.py  test_per_wallet_tax_engine.py  test_per_wallet_tax_engine_semantics_dependent.py  test_per_wallet_tax_engine_semantics_independent.py  test_rp2_decimal.py  test_tax_engine.py  test_transaction_set.py  test_transfer_analysis_semantics_dependent.py  test_transfer_analysis_semantics_independent.py  transaction_processing_common.py  transfer_analysis_common.py  transfer_analysis_test_common.py
(+139 files in other folders)
