[metadata]
name = rp2
version = 0.9.16
description = Privacy-focused, free, open-source cryptocurrency US tax calculator, up to date for fiscal year 2021: it handles multiple coins/exchanges and computes long/short-term capital gains, cost bases, in/out lot relationships/fractioning, and account balances. It supports FIFO and LIFO and it generates data that tax accountants can understand, even if they are not cryptocurrency experts (e.g. form 8949).
long_description_content_type = text/markdown
long_description = file: README.md, CHANGELOG.md
keywords = accounting, altcoin, bitcoin, BTC, capital gains, cost basis, crypto, cryptocurrency, ETH, ethereum, finance, form 8949, privacy, tax
license = Apache License 2.0
author = eprbell
url = https://github.com/eprbell/rp2
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Office/Business :: Financial :: Accounting
    Topic :: Utilities
project_urls =
    Source Code = https://github.com/eprbell/rp2
    Developer Documentation = https://github.com/eprbell/rp2/blob/main/README.dev.md
    User Documentation = https://github.com/eprbell/rp2/blob/main/README.md
    Contact = https://eprbell.github.io/eprbell/donations.html

[options]
package_dir =
    = src
packages = find:
install_requires =
    jsonschema>=3.2.0
    python-dateutil>=2.8.2
    pyexcel-ezodf>=0.3.4

[options.packages.find]
where = src
include_package_data = True
zip_safe = False
python_requires = >=3.7

[options.package_data]
rp2 = py.typed
* = *.ods

[options.entry_points]
console_scripts =
    rp2_us = rp2.plugin.country.us:rp2_entry
