[metadata]
name = rp2
version = 1.7.2
description = Privacy-focused, free, non-commercial, open-source, community-driven cryptocurrency tax calculator: it handles multiple coins/exchanges and computes long/short-term capital gains, cost bases, in/out lot relationships/fractioning, and account balances. It supports multiple countries and accounting menthods (FIFO, LIFO, HIFO), it features transparent computation for easy result verification, and it generates reports tax accountants can understand (e.g. form 8949).

long_description_content_type = text/markdown
long_description = file: README.md, CHANGELOG.md
keywords = accounting, altcoin, bitcoin, BTC, capital gains, cost basis, crypto, cryptocurrency, DeFi, ETH, ethereum, finance, form 8949, NFT, privacy, wallet, tax
license = Apache License 2.0
author = eprbell
url = https://github.com/eprbell/rp2
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Office/Business :: Financial :: Accounting
    Topic :: Utilities
    Typing :: Typed
project_urls =
    Source Code = https://github.com/eprbell/rp2
    Developer Documentation = https://github.com/eprbell/rp2/blob/main/README.dev.md
    User Documentation = https://github.com/eprbell/rp2/blob/main/README.md
    Contact = https://eprbell.github.io/eprbell/about.html

[options]
package_dir =
    = src
packages = find:
install_requires =
    Babel>=2.10.3
    jsonschema>=3.2.0
    prezzemolo>=0.0.4
    python-dateutil>=2.8.2
    pycountry>=24.6.1
    pyexcel-ezodf>=0.3.4

[options.extras_require]
dev =
    autopep8
    bandit
    black
    bumpversion
    flake8
    isort
    mypy
    pep8
    pre-commit
    pylint
    pytest
    pytest-mock
    rope
    types-jsonschema
    types-python-dateutil

[options.packages.find]
where = src
include_package_data = True
zip_safe = False
python_requires = >=3.8

[options.package_data]
rp2 = py.typed, locales/*/*/*.mo
rp2.plugin.report = data/*.ods, data/*/*.ods, data/*/*.txt

[options.entry_points]
console_scripts =
    rp2_us = rp2.plugin.country.us:rp2_entry
    rp2_jp = rp2.plugin.country.jp:rp2_entry
    rp2_es = rp2.plugin.country.es:rp2_entry
    rp2_generic = rp2.plugin.country.generic:rp2_entry
    rp2_ie = rp2.plugin.country.ie:rp2_entry
    rp2_config = rp2.rp2_configuration_translator:rp2_configuration_translator
